--- a/_posts/2015-09-29-intro.markdown
+++ b/_posts/2015-09-29-intro.markdown
@@ -6,7 +6,7 @@ categories: jekyll update
 ---
 The purpose of this blog is to share the progress of a research project pertaining to machine-learning and music improvisation developed by data scientist Juan Hernandez and composer Scott Rubin. Both researchers are currently based in Berkeley, California. The funding for this research was generously provided by the University of California, Berkeley Digital Humanities Collaborative Research Grant, with support from the Andrew W. Mellon Foundation. We are also thankful for technological support from the Center for New Music and Audio Technologies (CNMAT).
 
-Our goal is to make a computer program that interacts with human improvising musicians to automatically co-other music in real time using machine learning. This real-time interactive system will contribute to and draw from already existing branches of study in music composition and computer science. From computer science, the system will apply techniques from Music Information Retrieval (MIR) and Machine Learning to analyze and generate musical content. Within the domain of music composition, our piece aims to develop an interactive digital framework for gesture-based music improvisation. This latter point distinguishes the project from previous work in machine improvisation/composition which, for the most part, has historically attempted to mimic musical styles by generating melodies. In contemporary practices of music improvisation and performance, melody is not the sole descriptor of a musical style. Performers communicate more with musical actions and sonic events within a conditioned space, rather than pre-established harmonic movement or melodic movement.
+Our goal is to make a computer program that interacts with human improvising musicians to automatically co-author music in real time using machine learning. This real-time interactive system will contribute to and draw from already existing branches of study in music composition and computer science. From computer science, the system will apply techniques from Music Information Retrieval (MIR) and Machine Learning to analyze and generate musical content. Within the domain of music composition, our piece aims to develop an interactive digital framework for gesture-based music improvisation. This latter point distinguishes the project from previous work in machine improvisation/composition which, for the most part, has historically attempted to mimic musical styles by generating melodies. In contemporary practices of music improvisation and performance, melody is not the sole descriptor of a musical style. Performers communicate more with musical actions and sonic events within a conditioned space, rather than pre-established harmonic movement or melodic movement.
 
 Through the course of this project, we will do our best to explain our research clearly for the general public, as well as share our thoughts and philosophies regarding music improvisation, the role of the computer in music performance, music notation, machine learning, music information retrieval, programming in Python and Max/MSP, and a variety of other topics that we will encounter through the course of this project. 
 
